fix: Update z-index

--- a/app/globals.css
+++ b/app/globals.css
@@ -690,7 +690,7 @@ html[data-theme="dark"] .theme-icon-dark {
   position: absolute;
   inset: 0;
   z-index: 0;
-  height: 900vh;
+  height: 90vh;
    z-index:99;
 }
 
